--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "eleventy",
-    "dev": "eleventy --serve"
+    "dev": "eleventy --serve",
+    "test": "tsc --allowJs --noEmit --checkJs --strict"
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.0-canary.13",
@@ -25,6 +26,8 @@
     "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.101",
+    "graphql": "^16.5.0",
     "typescript": "^4.7.4"
   }
 }
