--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.101",
     "graphql": "^16.5.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
