--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "graphql-tag": "^2.12.6"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.101",
+    "@netlify/functions": "^1.0.0",
+    "@types/node": "^16.11.47",
     "graphql": "^16.5.0",
+    "netlify-cli": "^10.13.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
