--- a/.github/workflows/deploy-to-netlify.yml
+++ b/.github/workflows/deploy-to-netlify.yml
@@ -33,8 +33,9 @@ jobs:
           fi
 
       - name: Set up Node.js
-        run: |
-          nvm install
+        uses: actions/setup-node@v3
+        with:
+          node-version-file: '.tool-versions'
 
       - name: Cache node_modules
         uses: actions/cache@v2
