fix: fixed error in Netlify function response

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "rootDir": ".",
+    "skipLibCheck": true,
     "target": "ES6"
   },
   "exclude": ["dist", "**/*.test.ts", "**/*.d.ts"],
