--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -7,6 +7,9 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
 
+    env:
+      DEBUG: localhost-screenshot
+
     steps:
       - name: Check out repository
         uses: actions/checkout@v2
