fix: fixed WordPress data import,  added README

--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,7 @@ REST_API=
 # API Token to perform requests to the Github GraphQL API.
 # Must contain 'repo' scope as bare minimum.
 GITHUB_API_TOKEN=
+
+# Authentication credentials for Hook function (recommended)
+HOOK_FUNCTION_USERNAME=
+HOOK_FUNCTION_PASSWORD=
