--- a/.github/workflows/deploy-to-netlify.yml
+++ b/.github/workflows/deploy-to-netlify.yml
@@ -24,11 +24,11 @@ jobs:
         run: |
           if [[ $PROD == 'false' ]]; then
             SHORT_SHA=$(git rev-parse --short ${{ github.event.after }})
-            echo "COMMIT_SHA=($SHORT_SHA)" >> $GITHUB_ENV
+            echo "COMMIT_REF=($SHORT_SHA)" >> $GITHUB_ENV
             echo "COMMIT_MESSAGE=($SHORT_SHA) $(git --no-pager log -1 --pretty=format:"%s" ${{ github.event.after }})" >> $GITHUB_ENV
           else
             SHORT_SHA=$(git rev-parse --short $GITHUB_SHA)
-            echo "COMMIT_SHA=($SHORT_SHA)" >> $GITHUB_ENV
+            echo "COMMIT_REF=($SHORT_SHA)" >> $GITHUB_ENV
             echo "COMMIT_MESSAGE=($SHORT_SHA) ${{ github.event.head_commit.message }}" >> $GITHUB_ENV
           fi
 
