feat: added posts, stories, added base structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 /.netlify
+/netlify/functions/stories/*
+!/netlify/functions/stories/index.js
 
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
