--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "@11ty/eleventy": "^2.0.0-canary.13",
+    "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.4",
     "eleventy-plugin-helmet": "^0.2.2",
     "got": "^11",
