--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "color": "#34623F",
   "short_name": "Sascha offline",
-  "description": "Sascha ist offline. Ein Blog über Ereignisse, wo kein Computer dabei ist.",
+  "description": "Sascha ist offline. Ein Blog über Ereignisse, bei denen kein Computer dabei ist.",
   "repository": "https://github.com/vorchdorf-dot-media/sascha.vorchdorf.media",
   "homepage": "https://sascha.vorchdorf.media",
   "author": {
