--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "license": "MIT",
   "private": true,
+  "engines": {
+    "node": ">=16.16.0"
+  },
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "eleventy",
