fix: fixed typo

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "color": "#123440",
   "short_name": "Sascha offline",
   "description": "Sascha ist offline. Ein Blog über Ereignisse, bei denen kein Computer dabei ist.",
-  "language": "de_AT",
+  "language": "de",
   "repository": "https://github.com/vorchdorf-dot-media/sascha.vorchdorf.media",
   "homepage": "https://sascha.vorchdorf.media",
   "author": {
