--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "node": ">=16.16.0"
   },
   "scripts": {
-    "prebuild": "rm -rf dist",
-    "build": "eleventy",
+    "build:clean": "rm -rf dist",
+    "build:compile": "eleventy",
+    "build:copy": "cp -v _redirects dist",
+    "build": "run-s build:*",
     "dev": "netlify dev",
     "test": "tsc --allowJs --noEmit --checkJs --strict"
   },
@@ -34,6 +36,7 @@
     "eleventy-plugin-helmet": "^0.2.2",
     "got": "^11",
     "graphql-tag": "^2.12.6",
+    "npm-run-all": "^4.1.5",
     "posthtml": "^0.16.6",
     "posthtml-minifier": "^0.1.0"
   },
