--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -47,7 +47,7 @@ jobs:
         with:
           devices: iPad, iPad Pro, iPhone 13, Pixel 5, Desktop
           dist: dist
-          url: /blog/
+          url: /blog/index.html
 
       - name: Create website screenshots (dark mode)
         uses: saschazar21/actions/packages/localhost-screenshot@main
@@ -55,7 +55,7 @@ jobs:
           dark: true
           devices: iPad, iPad Pro, iPhone 13, Pixel 5, Desktop
           dist: dist
-          url: /blog/
+          url: /blog/index.html
 
       - name: Upload screenshots
         uses: actions/upload-artifact@v2
