--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@11ty/eleventy": "^2.0.0-canary.13",
     "@11ty/eleventy-img": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
+    "@ampproject/eleventy-plugin-amp": "^0.5.8",
     "@piraces/eleventy-plugin-pwa": "^1.1.2",
     "cheerio": "^1.0.0-rc.12",
     "dayjs": "^1.11.4",
